@@ -2,8 +2,10 @@
 
 Changes with Apache 2.4.21
 
-  *) mod_http2: fixed a write after free when streams/connections
-     were aborted before tasks returned. [Stefan Eissing] 
+  *) mod_http2: improved cleanup of connection/streams/tasks to always
+     have deterministic order regardless of event initiating it. Addresses
+     reported crashes due to memory read after free issues. 
+     [Stefan Eissing] 
   
   *) mod_ssl: Correct the interaction between SSLProxyCheckPeerCN and newer
      SSLProxyCheckPeerName directives since release 2.4.5, such that disabling
